# Clifford-Sensors

./: diagrama_funcional_dm2.drawio
tesis/CODIGOS/: camarita.py  esquematico.s#1  esquematico.s#2  esquematico.s#3  esquematico.s#4  esquematico.sch  esquematico_doggy.fzz  gps o.py  gps.py  import tkinter as tk.py  lidar instrucciones.txt
tesis/CODIGOS/CAN_read/: CAN_read.ino
tesis/CODIGOS/CAN_write/: CAN_write.ino
tesis/CODIGOS/can-mq4-mpu/: can-mq4-mpu.ino
tesis/CODIGOS/can-voltaje-corriente/: can-voltaje-corriente.ino
tesis/CODIGOS/can_mq4/: can_mq4.ino
tesis/CODIGOS/can_voltaje/: can_voltaje.ino
tesis/CODIGOS/enviar_datos/: enviar_datos.ino
tesis/CODIGOS/mpu/: mpu.ino
tesis/CODIGOS/mpu-can/: mpu-can.ino
tesis/CODIGOS/mpu9250_completo/: mpu9250_completo.ino
tesis/CODIGOS/recibir_datos/: recibir_datos.ino
tesis/CODIGOS/sensor_gas/: sensor_gas.ino
tesis/CODIGOS/tesis_launch/: package.xml  setup.py
tesis/CODIGOS/tesis_launch/launch/: launch_description.py  rviz.rviz
tesis/CODIGOS/tesis_launch/tesis_launch/: camaron_pub.py  camaron_sus.py  comandos_pub.py  rviz_launcher_node.py
tesis/DOCUMENTACIÓN/ACTAS/: Acta16_al_20_sept.docx  Acta23_al_27_sept.docx  Acta30sept_al_04_oct.docx  Acta_1.docx  Acta_2.docx  Acta_3.docx  Acta_4.docx  Acta_5.docx
tesis/DOCUMENTACIÓN/Bepkman_rup/: Justificacion.txt  Objetivo_general  Objetivos_específicos.txt  Planteamiento del problema.txt
tesis/DOCUMENTACIÓN/ESQUEMATICO/: es11quematico_tesis_brd.b#1  es11quematico_tesis_brd.brd  es11quematico_tesis_brd.sch
tesis/DOCUMENTACIÓN/RUP/: DIAGRAMA_DE_CLASES.docx  (+6 more)
(+5 files in other folders)
