<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tesis_launch</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="cliford@todo.todo">cliford</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!--<build_depend>launch</build_depend>-->
  <!--<build_depend>launch_ros</build_depend>-->

  <depend>rclpy</depend>
  <depend>cv2</depend> <!-- Agregar si usas OpenCV -->
  <depend>ultralytics</depend> <!-- Asegúrate de que la biblioteca está instalada -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
